@@ -12,11 +12,6 @@
 require_once './libraries/common.inc.php';
 
 /**
-  * Load mootools for upload progress bar
-  */
-$GLOBALS['js_include'][] = 'mootools-more.js';
-
-/**
  * Gets tables informations and displays top links
  */
 require './libraries/db_common.inc.php';
