@@ -12,12 +12,6 @@
 require_once './libraries/common.inc.php';
 
 /**
-  * Load mootools for upload progress bar
-  */
-$GLOBALS['js_include'][] = 'mootools-more.js';
-
-
-/**
  * Does the common work
  */
 require './libraries/server_common.inc.php';
